name: direct-sqlite
version: 1.0
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2009 Dan Knapp
author: Dan Knapp
maintainer: dankna@gmail.com
homepage: http://www.dankna.com/software/
bug-reports: http://www.dankna.com/issues/create/
category: Database
synopsis: Low-level binding to libpng.
description:
  This package is a partial binding to libpng.  I was frustrated with the gd binding
  not building for me, and at any rate gd has some restrictions (such as the inability
  to read the complete alpha channel).  So I wrote this.  I hope it's useful to
  somebody.

Library
  exposed-modules: Graphics.PNG
  build-depends: base >= 4.1 && < 5
